--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -1,25 +1,25 @@
 <div class="bg-light p-5 rounded">
   <h3>Books</h3>
-  <table class="table">
-<thead>
-  <tr>
-    <th scope="col">#</th>
-    <th scope="col">Book name</th>
-    <th scope="col">Category</th>
-    <th scope="col">Price</th>
-  </tr>
-</thead>
-<tbody>
-  {% for book in books %}
-  <tr>
-  <th scope="row"><a href="book_info?book_id={{ book.get_id() }}">{{loop.index}}</a></th>
-    <td><a href="/market/book_info?book_id={{ book.get_id() }}">{{book.get_prodname()}}</a></td>
-    <td>{{book.get_category()}}</td>
-  <td>CN¥ {{book.get_price()}}</td>
-  </tr>
-  {% endfor %}
-</tbody>
-</table>
+  <table class="table" data-toggle="table" data-pagination="true" data-search="true">
+    <thead>
+      <tr>
+	<th data-field="id" data-sortable="true" scope="col">#</th>
+	<th data-field="name" data-sortable="true" scope="col">Book name</th>
+	<th data-field="category" data-sortable="true" scope="col">Category</th>
+	<th data-field="price" data-sortable="true" scope="col">Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for book in books %}
+      <tr>
+	<th scope="row"><a href="book_info?book_id={{ book.get_id() }}">{{loop.index}}</a></th>
+	<td><a href="/market/book_info?book_id={{ book.get_id() }}">{{book.get_prodname()}}</a></td>
+	<td>{{book.get_category()}}</td>
+	<td>{{book.get_price()}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
 <br>
 
