--- a/sails-bin/templates/market/book_info_user.html
+++ b/sails-bin/templates/market/book_info_user.html
@@ -17,4 +17,5 @@
 	</tr>
       </tbody>
     </table>
+    <a href="/messages/chat?receiver_id={{seller.get_id()}}" class="btn btn-primary" role="button">Send a message</a>
 {% endblock seller %}
