--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -13,6 +13,7 @@
           <li><a href="/" class="nav-link px-2 text-white">FLibrary</a></li>
           <li><a href="/market" class="nav-link px-2 text-white">Market</a></li>
           <li><a href="/user" class="nav-link px-2 text-secondary">Portal</a></li>
+	  <li><a href="/messages" class="nav-link px-2 text-white">Messages</a></li>
         </ul>
 
         <div class="text-end">
