--- a/sails-bin/templates/market/post_book.html
+++ b/sails-bin/templates/market/post_book.html
@@ -58,7 +58,7 @@
     </div>
     <br>
     <div class="form-group row">
-      <label for="inputPassword" class="col-sm-2 col-form-label">Description</label>
+      <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
       <div class="col-sm-10">
 	<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
       </div>
