--- a/sails-bin/templates/market/categories.html
+++ b/sails-bin/templates/market/categories.html
@@ -4,7 +4,7 @@
   <div class="bg-light p-5 rounded">
     <h1>Welcome to the market</h1>
     <p class="lead">Here you can see what books are on sale and post your own books.</p>
-    <a href="all_products" class="btn btn-primary" role="button">Browse all books</a>
+    <a href="all_books" class="btn btn-primary" role="button">Browse all books</a>
   </div>
   <br>
 
