rewrite the web UI

--- a/sails-bin/templates/market/all_books.html
+++ b/sails-bin/templates/market/all_books.html
@@ -1,5 +1,8 @@
-{% extends "market.html" %}
-{% block inner %}
+{% extends "base.html" %}
+{% block title %}Market{% endblock title %}
+{% block navbutton %}<li class="nav-item"><a href="/market/post_book" class="btn btn-warning" role="button">Post a book</a></li>{% endblock navbutton %}
+
+{% block content %}
 <main class="container">
   {% include "display_flash.html" %}
 
@@ -19,4 +22,4 @@
     <br>
   {% endif %}
 </main>
-{% endblock inner %}
+{% endblock content %}
