--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -1,5 +1,6 @@
-{% extends "market.html" %}
-{% block inner %}
+{% extends "base.html" %}
+{% block title %}Book info{% endblock title %}
+{% block content %}
 <main class="container">
     <div class="bg-light p-5 rounded">
     {% block book %}
@@ -30,4 +31,4 @@
     </div>
     <br>
 </main>
-{% endblock inner %}
+{% endblock content %}
