--- a/sails-bin/templates/market/categories.html
+++ b/sails-bin/templates/market/categories.html
@@ -1,5 +1,6 @@
-{% extends "market.html" %}
-{% block inner %}
+{% extends "base.html" %}
+{% block title %}Categories{% endblock title %}
+{% block content %}
 <main class="container">
   <div class="bg-light p-5 rounded">
     <h1>Welcome to the market</h1>
@@ -22,4 +23,4 @@
   </div>
   <br>
 </main>
-{% endblock inner %}
+{% endblock content %}
