--- a/sails-bin/templates/messages/portal.html
+++ b/sails-bin/templates/messages/portal.html
@@ -1,5 +1,5 @@
-{% extends "messages.html" %}
-{% block inner %}
+{% extends "base.html" %}
+{% block content %}
 <main class="container">
   {% include "display_flash.html" %}
 
@@ -39,4 +39,4 @@
     <br>
   {% endif %}
 </main>
-{% endblock inner %}
+{% endblock content %}
