--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -10,14 +10,54 @@
 
   <!-- Bootstrap core CSS -->
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css">
+  <link href="/static/css/main.css" rel="stylesheet">
+  <link href="/static/css/bootstrap-table.min.css" rel="stylesheet">
   {% endblock head %}
 </head>
+{% block body %}
 <body>
-  {% block content %}{% endblock content %}
-  <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.js"></script>
+  <div id="page-container">
+   <div id="content-wrap">
+   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="/">FLibrary</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarItems">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="/market">Market</a></li>
+            <li class="nav-item"><a class="nav-link" href="/user">Portal</a></li>
+            <li class="nav-item"><a class="nav-link" href="/messages">Messages</a></li>
+	    <li class="nav-item"><a class="nav-link" href="https://github.com/flibrary/sails/wiki/User-Guide">User Guide</a></li>
+	    {% block navbutton %}{% endblock navbutton %}
+          </ul>
+        </div>
+      </div>
+   </nav>
+   <br>
+
+   {% block content %}{% endblock content %}
+
+   </div>
+  <script src="/static/js/jquery.min.js"></script>
+  <script src="/static/js/popper.min.js"></script>
+  <script src="/static/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="/static/js//bootstrap-table.min.js"></script>
+
+  <br>
+  <footer id="footer" class="footer mt-auto py-3 bg-dark text-white">
+    <div class="container">
+      <span>Copyright © 2021, Harry Ying<br>Licensed under MIT License.<br>Made with ❤ using NixOS, Rust, and Bootstrap.</span>
+    </div>
+  </footer>
+
+  <script>
+    $('.navbar-collapse a').click(() => {
+        $(".navbar-collapse").collapse('hide');
+    });
+  </script>
+  </div>
 </body>
+{% endblock body %}
 </html>
