--- a/sails-bin/templates/market/update_book.html
+++ b/sails-bin/templates/market/update_book.html
@@ -1,25 +1,6 @@
-{% extends "market.html" %}
+{% extends "base.html" %}
 {% block title %}Update book{% endblock title %}
 {% block content %}
-  <header class="p-3 bg-dark text-white">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 text-white">FLibrary</a></li>
-          <li><a href="/market" class="nav-link px-2 text-secondary">Market</a></li>
-          <li><a href="/user" class="nav-link px-2 text-white">Portal</a></li>
-        </ul>
-	<div class="text-end">
-	  <a href="/market" class="btn btn-warning" role="button">Back</a>
-	</div>
-      </div>
-    </div>
-  </header>
-  <br>
   <main class="container">
   <div class="bg-light p-5 rounded">
     <h1>Update the book</h1>
