--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -1,29 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Portal{% endblock title %}
+{% block navbutton %}<li class="nav-item"><a href="/user/logout" class="btn btn-warning" role="button">Log out</a></li>{% endblock navbutton %}
 
 {% block content %}
-  <header class="p-3 bg-dark text-white">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 text-white">FLibrary</a></li>
-          <li><a href="/market" class="nav-link px-2 text-white">Market</a></li>
-          <li><a href="/user" class="nav-link px-2 text-secondary">Portal</a></li>
-	  <li><a href="/messages" class="nav-link px-2 text-white">Messages</a></li>
-        </ul>
-
-        <div class="text-end">
-	  <a href="/user/logout" class="btn btn-warning" role="button">Log out</a>
-        </div>
-      </div>
-    </div>
-  </header>
-
-<br>
 <main class="container">
   {% include "display_flash.html" %}
   <div class="bg-light p-5 rounded">
