--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -29,7 +29,7 @@
             <li class="nav-item"><a class="nav-link" href="/market">Market</a></li>
             <li class="nav-item"><a class="nav-link" href="/user">Portal</a></li>
             <li class="nav-item"><a class="nav-link" href="/messages">Messages</a></li>
-	    <li class="nav-item"><a class="nav-link" href="https://github.com/flibrary/sails/wiki/User-Guide">User Guide</a></li>
+	    <li class="nav-item"><a class="nav-link" href="https://github.com/flibrary/sails/wiki/FLibrary">User Guide</a></li>
 	    {% block navbutton %}{% endblock navbutton %}
           </ul>
         </div>
@@ -46,7 +46,7 @@
   <script src="/static/js//bootstrap-table.min.js"></script>
 
   <br>
-  <footer id="footer" class="footer mt-auto py-3 bg-dark text-white">
+  <footer id="footer" class="footer mt-auto py-3 bg-light text-muted">
     <div class="container">
       <span>Copyright © 2021, Harry Ying<br>Licensed under MIT License.<br>Made with ❤ using NixOS, Rust, and Bootstrap.</span>
     </div>
