Implement an ergonomic category system

--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -32,7 +32,7 @@
     </tr>
     <tr>
       <th scope="row">Category</th>
-      <td><a href="categories?ctg={{ book.get_category() }}">{{ book.get_category() }}</a></td>
+      <td><a href="categories?ctg={{ category.id() }}">{{ category.name() }}</a></td>
     </tr>
     </tbody>
     </table>
