--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -12,10 +12,10 @@
     <tbody>
       {% for book in books %}
       <tr>
-	<th scope="row"><a href="book_info?book_id={{ book.get_id() }}">{{loop.index}}</a></th>
-	<td><a href="/market/book_info?book_id={{ book.get_id() }}">{{book.get_prodname()}}</a></td>
-	<td>{{book.get_category()}}</td>
-	<td>{{book.get_price()}}</td>
+	<th scope="row"><a href="book_info?book_id={{ book.0.get_id() }}">{{loop.index}}</a></th>
+	<td><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></td>
+	<td>{{book.1.name()}}</td>
+	<td>{{book.0.get_price()}}</td>
       </tr>
       {% endfor %}
     </tbody>
