--- a/sails-bin/templates/market/post_book.html
+++ b/sails-bin/templates/market/post_book.html
@@ -25,7 +25,7 @@
       <div class="col-sm-4">
         <select class="form-select" aria-label="Default select example" name="category">
 	  {% for category in categories %}
-	    <option value="{{category.id}}">{{category.id}}</option>
+	    <option value="{{category.id()}}">{{category.name()}}</option>
 	  {% endfor %}
 	</select>
       </div>
@@ -41,7 +41,7 @@
     <div class="form-group row">
       <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
       <div class="col-sm-10">
-	<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
+	<textarea class="form-control" id="exampleFormControlTextarea1" rows="15" name="description"></textarea>
       </div>
     </div>
     <br>
