--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -14,7 +14,12 @@
       <tr>
 	<th scope="row"><a href="book_info?book_id={{ book.0.get_id() }}">{{loop.index}}</a></th>
 	<td><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></td>
-	<td>{{book.1.name()}}</td>
+	{% match book.1 %}
+	{% when Some with (ctg) %}
+	<td>{{ctg.name()}}</td>
+        {% when None %}
+	<td>Not categorized</td>
+        {% endmatch %}
 	<td>{{book.0.get_price()}}</td>
       </tr>
       {% endfor %}
