--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -6,5 +6,6 @@
 {% block seller %}
 <h1>Actions</h1>
 <a href="post_book?book_id={{book.get_id()}}" class="btn btn-primary" role="button">Update</a>
+<a href="instruction?book_id={{book.get_id()}}" class="btn btn-warning" role="button">Instruction</a>
 <a href="delete?book_id={{book.get_id()}}" class="btn btn-danger" role="button">Delete</a>
 {% endblock seller %}
