--- a/sails-bin/templates/market/instruction.html
+++ b/sails-bin/templates/market/instruction.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Instruction{% endblock title %}
 {% block content %}
 <main class="container">
     <div class="bg-light p-5 rounded">
