--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -16,12 +16,12 @@
       <label for="floatingInput">Email</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" placeholder="School" name="school">
-      <label for="floatingInput">School</label>
+      <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="name">
+      <label for="floatingInput">Name</label>
     </div>
     <div class="form-floating">
-      <input type="tel" class="form-control" id="floatingInput" placeholder="Phone" name="phone">
-      <label for="floatingInput">Phone</label>
+      <input type="text" class="form-control" id="floatingInput" placeholder="School" name="school">
+      <label for="floatingInput">School</label>
     </div>
     <div class="form-floating">
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
