--- a/sails-bin/templates/messages/portal.html
+++ b/sails-bin/templates/messages/portal.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Chat Portal{% endblock title %}
 {% block content %}
 <main class="container">
   {% include "display_flash.html" %}
@@ -23,7 +24,7 @@
         <tbody>
 	  {% for message in message_list %}
 	  <tr>
-	    <th scope="row"><a href="/messages/chat?receiver_id={{ message.get_send() }}">{{ message.get_send() }}</a></th>
+	    <th scope="row"><a href="/messages/chat?user_id={{ message.get_send() }}">{{ message.get_send() }}</a></th>
 	    <td>{{message.get_body()}}</td>
 	    <td>{{message.get_time_sent()}}</td>
 	  </tr>
