--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -18,7 +18,7 @@
 <body>
   <div id="page-container">
    <div id="content-wrap">
-   <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
+   <nav class="navbar sticky-top navbar-expand-md navbar" style="background-color: #f1f1f1;">
       <div class="container">
         <a class="navbar-brand" href="/">FLibrary</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
