use Google reCAPTCHA

--- a/sails-bin/templates/admin/root.html
+++ b/sails-bin/templates/admin/root.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Root dashboard{% endblock title %}
+{% block navbutton %}<li class="nav-item"><a href="/admin/root/logout" class="btn btn-warning" role="button">Log out</a></li>{% endblock navbutton %}
 
 {% block content %}
 <main class="container">
