--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -4,31 +4,35 @@
     {% call super() %}
     <!-- Custom styles for sign in page -->
     <link href="/static/css/signin.css" rel="stylesheet">
+    <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
 {% endblock head %}
 
 {% block body %}
 <main class="form-signin text-center">
-  <form action="create_user" method="post">
+  <form action="create_user" method="post" id="signup-form">
     <h1 class="h3 mb-3 fw-normal">Please enter information</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="email">
+      <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="user_info[email]">
       <label for="floatingInput">Email</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="name">
+      <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="user_info[name]">
       <label for="floatingInput">Name</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" placeholder="School" name="school">
+      <input type="text" class="form-control" id="floatingInput" placeholder="School" name="user_info[school]">
       <label for="floatingInput">School</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="user_info[password]">
       <label for="floatingPassword">Password</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+    <div class="g-recaptcha" data-sitekey="{{ recaptcha_key }}"></div>
+    <br/>
+    <button class="w-100 btn btn-lg btn-primary" type="submit" id="signup-submit" onclick="onSubmit()">Sign up</button>
   </form>
   {% include "display_flash.html" %}
 </main>
+
 {% endblock body %}
