--- a/sails-bin/templates/root/root.html
+++ b/sails-bin/templates/root/root.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Root dashboard{% endblock title %}
-{% block navbutton %}<li class="nav-item"><a href="/admin/root/logout" class="btn btn-warning" role="button">Log out</a></li>{% endblock navbutton %}
+{% block navbutton %}<li class="nav-item"><a href="/root/logout" class="btn btn-warning" role="button">Log out</a></li>{% endblock navbutton %}
 
 {% block content %}
 <main class="container">
@@ -22,6 +22,7 @@
 	  <th data-field="school" data-sortable="true" scope="col">School</th>
 	  <th data-field="status" data-sortable="true" scope="col">Status</th>
 	  <th data-field="actions" scope="col">Actions</th>
+	  <th data-field="delete" scope="col">Dangerous</th>
 	</tr>
       </thead>
       <tbody>
@@ -31,7 +32,8 @@
 	  <td>{{user.get_name()}}</td>
 	  <td>{{user.get_school()}}</td>
 	  <td>{{ "{:?}"|format(user.get_user_status()) }}</td>
-	  <td><a href="/admin/downgrade_user?user_id={{user.get_id()}}" class="btn btn-warning" role="button">Down</a> <a href="/admin/promote_user?user_id={{user.get_id()}}" class="btn btn-primary" role="button">Up</a></td>
+	  <td><a href="/root/downgrade_user?user_id={{user.get_id()}}" class="btn btn-warning" role="button">Down</a> <a href="/root/promote_user?user_id={{user.get_id()}}" class="btn btn-primary" role="button">Up</a></td>
+	  <td><a href="/root/delete_user?user_id={{user.get_id()}}" class="btn btn-danger" role="button">Delete</a>
 	</tr>
 	{% endfor %}
       </tbody>
