update frontend layer

--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -6,7 +6,9 @@
     <div class="px-4 pt-5 my-5 text-center">
     <h1 class="display-4 fw-bold">FLibrary</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Sell non-needed but expensive textbooks. Buy textbooks with handwritten notes from experienced students. Save money and get most out of your books.</p>
+      <p class="lead mb-4">Where Knowledge Values.</p>
+      <a href="/user/signup" class="btn btn-primary" role="button">Sign Up</a>
+      <a href="https://github.com/flibrary/flibrary.github.io/wiki" class="btn btn-secondary" role="button">Learn More</a>
     </div>
   </div>
 {% endblock content %}
