--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -56,6 +56,12 @@
     <a href="/user" class="btn btn-primary" role="button">Sign in to contact the seller</a>
     {% endblock seller %}
     </div>
+
+    <br>
+
+    <div class="bg-light p-5 rounded">
+    {% block actions %}{% endblock actions %}
+    </div>
     <br>
 </main>
 {% endblock content %}
