--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -1,11 +1,32 @@
-{% extends "book_info_guest.html" %}
-{% block book %}
-{% call super() %}
-{% endblock book %}
+{% extends "book_info_user.html" %}
 
 {% block seller %}
+<h1>Contact info</h1>
+<table class="table table-hover">
+  <tbody>
+    <tr>
+      <th scope="row">Email</th>
+      <td><a href="mailto:{{seller.get_id()}}">{{ seller.get_id() }}</a></td>
+    </tr>
+    <tr>
+      <th scope="row">Real name</th>
+      <td>{{ seller.get_name() }}</td>
+    </tr>
+    <tr>
+      <th scope="row">School</th>
+      <td>{{ seller.get_school() }}</td>
+    </tr>
+    <tr>
+      <th scope="row">Account status</th>
+      <td>{{ "{:?}"|format(seller.get_user_status()) }}</td>
+    </tr>
+  </tbody>
+</table>
+{% endblock seller %}
+
+{% block actions %}
 <h1>Actions</h1>
 <a href="post_book?book_id={{book.get_id()}}" class="btn btn-primary" role="button">Update</a>
 <a href="instruction?book_id={{book.get_id()}}" class="btn btn-warning" role="button">Instruction</a>
 <a href="delete?book_id={{book.get_id()}}" class="btn btn-danger" role="button">Delete</a>
-{% endblock seller %}
+{% endblock actions %}
