--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -14,7 +14,7 @@
 
     <div class="form-floating">
       <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="user_info[email]">
-      <label for="floatingInput">Email</label>
+      <label for="floatingInput">Outlook Email</label>
     </div>
     <div class="form-floating">
       <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="user_info[name]">
