--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -27,9 +27,9 @@
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/market">Market</a></li>
-            <li class="nav-item"><a class="nav-link" href="/user">Portal</a></li>
             <li class="nav-item"><a class="nav-link" href="/messages">Messages</a></li>
-	    <li class="nav-item"><a class="nav-link" href="https://github.com/flibrary/sails/wiki/FLibrary">User Guide</a></li>
+	    <li class="nav-item"><a class="nav-link" href="https://github.com/flibrary/flibrary.github.io/wiki">Help</a></li>
+	    <li class="nav-item"><a class="nav-link" href="/user">User</a></li>
 	    {% block navbutton %}{% endblock navbutton %}
           </ul>
         </div>
