--- a/sails-bin/templates/market/book_info_user.html
+++ b/sails-bin/templates/market/book_info_user.html
@@ -21,5 +21,5 @@
 	</tr>
       </tbody>
     </table>
-    <a href="/messages/chat?receiver_id={{seller.get_id()}}" class="btn btn-primary" role="button">Send a message</a>
+    <a href="/messages/chat?user_id={{seller.get_id()}}" class="btn btn-primary" role="button">Send a message</a>
 {% endblock seller %}
