database infrastructure upgrade for product evolutionary progression

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -21,7 +21,7 @@
    <nav class="navbar sticky-top navbar-expand-md navbar" style="background-color: #f1f1f1;">
       <div class="container">
         <a class="navbar-brand" href="/">FLibrary</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
+        <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarItems">
