--- a/sails-bin/templates/user/signup_instruction.html
+++ b/sails-bin/templates/user/signup_instruction.html
@@ -6,6 +6,8 @@
       <h1>Verify your email address</h1>
 
       We have sent your an email to confirm. Go and check your inbox and junk folder to verify your email.
+      <br>
+      If you have not received our email in both your inbox and junk folder, please contact administrators for help.
     </div>
     <br>
 </main>
