--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Homepage{% endblock title %}
 {% block content %}
+<main class="container">
     {% include "display_flash.html" %}
 
     <div class="px-4 pt-5 my-5 text-center">
@@ -10,5 +11,6 @@
       <a href="/user/" class="btn btn-primary" role="button">Start</a>
       <a href="https://github.com/flibrary/flibrary.github.io/wiki" class="btn btn-secondary" role="button">Learn More</a>
     </div>
-  </div>
+    </div>
+</main>
 {% endblock content %}
