admin portal; user portal with guest mode, etc.

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -48,7 +48,7 @@
   <br>
   <footer id="footer" class="footer mt-auto py-3 bg-light text-muted">
     <div class="container">
-      <span>Copyright © 2021, Harry Ying<br>Licensed under MIT License.<br>Made with ❤ using NixOS, Rust, and Bootstrap.</span>
+      <span>Copyright © 2021, FLibrary Development Taskforce<br>Licensed under MIT License.<br>Made with ❤ using NixOS, Rust, and Bootstrap.</span>
     </div>
   </footer>
 
