--- a/sails-bin/templates/book_list.html
+++ b/sails-bin/templates/book_list.html
@@ -3,7 +3,7 @@
   <table class="table" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
       <tr>
-	<th data-field="id" data-sortable="true" scope="col">#</th>
+	<th data-field="id" data-sortable="true" scope="col">ID</th>
 	<th data-field="name" data-sortable="true" scope="col">Book name</th>
 	<th data-field="category" data-sortable="true" scope="col">Category</th>
 	<th data-field="price" data-sortable="true" scope="col">Price</th>
@@ -12,7 +12,7 @@
     <tbody>
       {% for book in books %}
       <tr>
-	<th scope="row"><a href="book_info?book_id={{ book.0.get_id() }}">{{loop.index}}</a></th>
+	<th scope="row"><a href="book_info?book_id={{ book.0.get_id() }}">{{book.0.get_shortid()}}</a></th>
 	<td><a href="/market/book_info?book_id={{ book.0.get_id() }}">{{book.0.get_prodname()}}</a></td>
 	{% match book.1 %}
 	{% when Some with (ctg) %}
@@ -27,4 +27,3 @@
   </table>
 </div>
 <br>
-
