--- a/sails-bin/templates/user/update_user_page.html
+++ b/sails-bin/templates/user/update_user_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Update book{% endblock title %}
+{% block title %}Update info{% endblock title %}
 {% block content %}
   <main class="container">
   <div class="bg-light p-5 rounded">
@@ -36,6 +36,13 @@
       <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
+      </div>
+    </div>
+    <br>
+    <div class="form-group row">
+      <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
+      <div class="col-sm-10">
+	<textarea class="form-control" id="exampleFormControlTextarea1" rows="15" name="description">{{ user.get_description().unwrap_or("") }}</textarea>
       </div>
     </div>
     <br>
