--- a/sails-bin/templates/market/book_info_user.html
+++ b/sails-bin/templates/market/book_info_user.html
@@ -9,7 +9,7 @@
 	</tr>
 	<tr>
 	  <th scope="row">Seller's real name</th>
-	  <td>{{ seller.get_name() }}</td>
+	  <td><a href="/user?user_id={{seller.get_id()}}">{{ seller.get_name() }}</a></td>
 	</tr>
 	<tr>
 	  <th scope="row">Seller's school</th>
