--- a/sails-bin/templates/admin/admin.html
+++ b/sails-bin/templates/admin/admin.html
@@ -96,10 +96,10 @@
       <tbody>
 	{% for book in verified_books %}
 	<tr>
-	  <th scope="row">{{book.get_shortid()}}</th>
+	  <th scope="row"><a href="/market/book_info?book_id={{ book.get_id() }}">{{book.get_shortid()}}</a></th>
 	  <td>{{book.get_prodname()}}</td>
 	  <td>{{book.get_price()}}</td>
-	  <td>{{book.get_seller_id()}}</td>
+	  <td><a href="/user?user_id={{book.get_seller_id()}}">{{book.get_seller_id()}}</a></td>
 	  <td><a href="/admin/normalize_book?book_id={{book.get_id()}}" class="btn btn-warning" role="button">Revert</a></td>
 	</tr>
 	{% endfor %}
