--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -10,7 +10,7 @@
     </tr>
     <tr>
       <th scope="row">Real name</th>
-      <td>{{ seller.get_name() }}</td>
+      <td><a href="/user?user_id={{seller.get_id()}}">{{ seller.get_name() }}</a></td>
     </tr>
     <tr>
       <th scope="row">School</th>
