fix a severe bug on user update; migrate to pulldown_markdown for better performance; fix several page layout issues

--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -2,5 +2,5 @@
 {% block title %}Portal{% endblock title %}
 
 {% block intro %}This page helps you to manage your books posted in the market and your basic account information.{% endblock intro %}
-{% block update_button %}<a href="/user/update_user_page" class="btn btn-primary" role="button">Update</a>{% endblock update_button %}
+{% block update_button %}<a href="/user/update_user_page" class="btn btn-primary" role="button">Update</a> <a href="/user/change_passwd" class="btn btn-warning" role="button">Change password</a>{% endblock update_button %}
 {% block postbook_button %}<a href="/market/post_book" class="btn btn-primary" role="button">Post a book</a>{% endblock postbook_button %}
