fix: post book category selection

--- a/sails-bin/templates/market/post_book.html
+++ b/sails-bin/templates/market/post_book.html
@@ -4,7 +4,7 @@
   <main class="container">
   <div class="bg-light p-5 rounded">
     <h1>Post a book</h1>
-    <p class="lead">Fill in relevant information to post a book for sale. If you want to add pictures, upload them elsewhere and paste link in the description below.</p>
+    <p class="lead">Fill in relevant information to post a book for sale. If you want to add pictures, upload them elsewhere and paste link in the description below. If you don't know how to, please refer to our <a href="https://github.com/flibrary/flibrary.github.io/wiki/PublishGuide " target="_blank">help page</a>.</p>
   </div>
   <br>
 
