--- a/sails-bin/templates/market/update_book.html
+++ b/sails-bin/templates/market/update_book.html
@@ -4,7 +4,7 @@
   <main class="container">
   <div class="bg-light p-5 rounded">
     <h1>Update the book</h1>
-    <p class="lead">Fill in relevant information to post a book for sale. If you want to add pictures, upload them elsewhere and paste link in the description below.</p>
+    <p class="lead">Fill in relevant information to post a book for sale. If you want to add pictures, upload them elsewhere and paste link in the description below. If you don't know how to, please refer to our <a href="https://github.com/flibrary/flibrary.github.io/wiki/PublishGuide " target="_blank">help page</a>.</p>
   </div>
   <br>
 
@@ -25,7 +25,11 @@
       <div class="col-sm-4">
         <select class="form-select" aria-label="Default select example" name="category">
 	  {% for category in categories %}
+	    {% if book.get_category_id() == category.id() %}
+	    <option value="{{category.id()}}" selected>{{category.name()}}</option>
+	    {% else %}
 	    <option value="{{category.id()}}">{{category.name()}}</option>
+	    {% endif %}
 	  {% endfor %}
 	</select>
       </div>
